--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -6,6 +6,7 @@ output: html_document
 # Pending
 - Create table comparing the AirQ+ and bestcost results to always control that we do not deviate.
 - Compare morbidity (not only mortality)
+- healthiar vs. geluft in the package
 
 # Preparation
 
